<resources>
    <string name="app_name">HWK Diary</string>
    <string name="homework_activity_name">Diary</string>
    <string name="action_settings">Settings</string>
    <string name="subject_icon">Subject Icon</string>
    <string name="title_activity_homework_entry">Homework Details</string>
    <string name="no_title">No homework title set</string>
    <string name="no_subject">No subject set</string>
    <string name="no_due_date">No due date set</string>
    <string name="homework_finished">Homework Finished</string>
    <string name="reminder_set">Reminder Set</string>
    <string name="continue_icon">Open Edit Arrow</string>
    <string name="todo_title">To Do List</string>
    <string name="move_icon">Move up and down</string>
    <string name="todo_text">To do list entry</string>
    <string name="add_new_todo">Make a new To Do List item</string>
    <string name="due_date_display_text">Due Date: </string>
    <string name="due_date_set">Set Due Date</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="set_details">Set Details</string>
    <string name="homework_title">Edit Homework Title</string>
    <string name="choose_subject">Choose Subject</string>
    <string name="homework_grade_title">What grade did you get?</string>
    <string name="todo_completed_checkbox">Mark as Finished</string>
    <string name="edit_to_do_title">Edit To Do List Entry</string>
    <string name="new_to_do_title">New To Do List Entry</string>
    <string name="title_default">No Title</string>
    <string name="date_cat_overdue">Overdue</string>
    <string name="date_cat_today">Today</string>
    <string name="date_cat_tomorrow">Tomorrow</string>
    <string name="date_cat_this_week">This Week</string>
    <string name="date_cat_next_week">Next Week</string>
    <string name="date_cat_after_next_week">After Next Week</string>
    <string name="date_cat_no_date">No Due Date</string>
    <string name="date_cat_completed">Completed</string>
    <string name="title_error_text">Must enter a title, press back to cancel</string>
    <string name="delete_to_do_text">Empty to do item deleted</string>
    <string name="cancel_create_new">Cancelled creating new homework</string>
    <string name="notify_me">Remind me</string>
    <string name="notify_due_tomorrow">Homework due tomorrow</string>
    <string name="notify_due">total:</string>
    <string name="notify_finished">completed</string>
    <string name="notify_unfinished">unfinished</string>
    <string name="and">and</string>
    <string name="txt_settings_title">Settings</string>
    <string name="txt_settings_notify_enable">Remind me about tomorrow\'s homework</string>
    <string name="txt_settings_notify_time">Reminder Time:</string>
    <string name="menu_datesubject">(D/S)</string>
    <string name="menu_new">(+)</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit_subjects">Edit Subjects</string>
    <string name="menu_time_table">TT</string>
    <string name="action_previous_week">{-</string>
    <string name="action_next_week">-}</string>
    <string name="action_this_week">(=)</string>
    <string name="action_new_tt">(+)</string>
    <string name="action_launch_list_tt">List</string>
    <string name="no_subject_set">No Subject</string>
    <string name="title_activity_subject_edit">Edit Subjects</string>
    <string name="default_subject">No Subject Name</string>
    <string name="enter_subject_name">Enter Subject Name</string>
    <string name="edit_subject">Edit Subject</string>
    <string name="empty_subject_warning">Please enter a subject name</string>
    <string name="confirm_delete_title">Delete Subject</string>
    <string name="subject_delete_text">Are you sure you want to delete</string>
    <string name="subject_delete_text_warning">Warning:\n</string>
    <string name="subject_delete_text_homework_entry">homework entry</string>
    <string name="subject_delete_text_and">and</string>
    <string name="subject_delete_text_timetable_entry">timetable entry</string>
    <string name="subject_delete_text_homework_entries">homework entries</string>
    <string name="subject_delete_text_timetable_entries">timetable entries</string>
    <string name="subject_delete_text_single1">is linked to</string>
    <string name="subject_delete_text_single2">, it will be set to \"No Subject\".</string>
    <string name="subject_delete_text_plural1">are linked to</string>
    <string name="subject_delete_text_plural2">, they will be set to \"No Subject\".</string>
    <string name="subject_delete_text_no_entries">Are you sure?</string>
    <string name="no_empty_grade_allowed">Please enter a grade or press cancel</string>
    <string name="homework_delete_confirm">Are you sure you want to delete this subject and to do list permanently?</string>
    <string name="dlg_delete_options">Delete Options</string>
    <string name="dlg_delete_all_homework">Delete all homework</string>
    <string name="dlg_delete_what">Delete what?</string>
    <string name="dlg_delete_option_completed">completed</string>
    <string name="dlg_delete_option_all">all</string>
    <string name="dlg_delete_option_by_subject">by subject</string>
    <string name="dlg_delete_when">Delete when:</string>
    <string name="dlg_delete_time_1">6 months past due date</string>
    <string name="dlg_delete_time_2">3 months past due date</string>
    <string name="dlg_delete_time_3">1 month past due date</string>
    <string name="dlg_delete_time_4">2 weeks past due date</string>
    <string name="dlg_delete_time_5">1 week past due date</string>
    <string name="dlg_delete_time_6">1 day past due date</string>
    <string name="dlg_delete_time_7">all</string>
    <string name="dlg_delete_confirm">This permanently deletes the entries selected.\nAre you sure?</string>
    <string name="title_activity_time_table">Time Table</string>
    <string name="view_as_list">View As List</string>
    <string name="title_activity_time_table_list">Time Table</string>
    <string name="hello_world">Hello world!</string>
    <string name="week">Week</string>
	<string-array name="tt_days_full">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="tt_days">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string-array name="tt_days_short">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>
    <string name="session_details">Session Details</string>
    <string name="hint_where">Where?</string>
    <string name="hint_with">Who with?</string>
    <string name="hint_title">shown if no subject</string>
    <string name="hint_notes">Notes (e.g. bring graph paper)</string>
    <string name="next">Next</string>
    <string name="subject">Subject:</string>
    <string name="optional_title">Title:</string>
    <string name="session_time">Session Time</string>
    <string name="start_time">Start time:</string>
    <string name="end_time">End time:</string>
    <string name="set_dates">Set Dates</string>
    <string name="session_dates">Session Dates</string>
    <string name="start_date">Start Date:</string>
    <string name="date_title_short">Date:</string>
    <string name="end_date">End Date:</string>
    <string name="date_of_month">Date of Month:</string>
    <string name="session_days">Session Days</string>
    <string name="frequency">Frequency</string>
    <string name="set">Set</string>
    <string-array name="tt_frequency">
        <item>One Off</item>
        <item>Weekly</item>
        <item>Every Other Week</item>
        <item>Date of the Month</item>
        <item>First * of the Month</item>
        <item>Second * of the Month</item>
        <item>Third * of the Month</item>
        <item>Fourth * of the Month</item>
        <item>Last * of the Month</item>
    </string-array>
    <string name="title_activity_time_table_new">Session Details</string>
    <string name="dlg_pick_date_title">Please enter a date of the month between 1 and 31</string>
    <string name="dlg_start_time_title">Choose a start time for the session</string>
    <string name="dlg_end_time_title">Choose an end time for the session</string>
    <string name="dlg_start_date_title">Set the Date of the Start of the First Session</string>
    <string name="dlg_end_date_title">Set the Date of the Last Session</string>
    <string name="missing_date">enter a date</string>
    <string name="missing_start_time">enter a start time</string>
    <string name="missing_end_time">enter an end time</string>
    <string name="missing_start_date">enter a start date</string>
    <string name="missing_end_date">enter an end date</string>
    <string name="missing_days">select at least one day</string>
    <string name="missing_day">select one day of the week</string>
    <string name="missing_date_of_month">enter a date of the month</string>
    <string name="missing_too_many_days_selected">select just one day</string>
    <string name="missing_end_time_after_start">end time must be later than start time</string>
    <string name="missing_end_date_after_start">end date must be after start date</string>
    <string name="missing_fields">Missing Fields</string>
    <string name="missing_fields_title">Please correct the following:</string>
    <string name="checking_for_clashes">Please wait, checking for clashes…</string>
    <string name="checking">Checking…</string>
    <string name="clashing_timetable_instructions">Please choose what to do:</string>
    <string name="overwrite_clashing_sessions">Remove Old Clashing Sessions</string>
    <string name="leave_out_new_clashing_sessions">Remove New Clashing Sessions</string>
    <string name="keep_all_clashing_sessions">Keep all Clashing Sessions \n(wont show all in landscape)</string>
    <string name="clashes_found">Clashes Found</string>
    <string name="amount_of_clashes_found">session(s) overlap with the one you have created.</string>
    <string name="edit_time_and_date">Edit Time and Date \></string>
    <string name="confirm_edit_instructions">Choose what this edit should effect</string>
    <string name="edit_all_instances">This entry on all dates set</string>
    <string name="edit_just_this_one">Just the entry on the date selected (ignores changes made to the dates)</string>
    <string name="notification_settings_title">Notification Settings</string>
    <string name="timetable_horiz_settings_title">Time Table Landscape Settings</string>
    <string name="timetable_vert_settings_title">Time Table Portrait Settings</string>
    <string name="notification_settings_instructions">The notification will let you know if you have any homework due on the next day.</string>
    <string name="timetable_horiz_settings_instructions">The landscape timetable will always change size to fit the sessions, the settings below let you set what should always be shown.</string>
    <string name="set_start_time_instructions">Choose start time</string>
    <string name="set_end_time_instructions">Choose end time</string>
    <string name="set_days_to_show_instructions">Choose days to always show:</string>
    <string name="landscape_timetable_fields_to_show">Timetable fields to show in landscape:</string>
    <string name="portrait_timetable_fields_to_show">Timetable fields to show in portrait:</string>
    <string name="chk_timetable_show_subject">Subject or title</string>
    <string name="chk_timetable_show_location">Location</string>
    <string name="chk_timetable_show_tutor">Tutor</string>
</resources>