<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_toggle_group_by_subject"
        android:orderInCategory="1"
        android:icon="@drawable/sort_icon"
        android:showAsAction="always"
        android:title="@string/menu_datesubject"/>
    <item
        android:id="@+id/action_new_homework"
        android:orderInCategory="2"
        android:icon="@drawable/new_icon"
        android:showAsAction="always"
        android:title="@string/menu_new"/>
    <item
        android:id="@+id/action_delete_homework"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/menu_delete"/>
    <item
        android:id="@+id/action_edit_subject_list"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/menu_edit_subjects"/>
    
</menu>