<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_previous_week"
        android:orderInCategory="1"
        android:icon="@drawable/arrows_left"
        android:showAsAction="always"
        android:title="@string/action_previous_week"/>
    <item
        android:id="@+id/action_this_week"
        android:orderInCategory="2"
        android:icon="@drawable/arrows_this_week"
        android:showAsAction="always"
        android:title="@string/action_this_week"/>
    <item
        android:id="@+id/action_next_week"
        android:orderInCategory="3"
        android:icon="@drawable/arrows_right"
        android:showAsAction="always"
        android:title="@string/action_next_week"/>
    <item
        android:id="@+id/action_new"
        android:orderInCategory="4"
        android:icon="@drawable/new_icon"
        android:showAsAction="always"
        android:title="@string/action_new_tt"/>

</menu>