<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_clashing_timetable_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size8dp"
            android:layout_marginLeft="@dimen/size16dp"
            android:layout_marginRight="@dimen/size16dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txt_clashing_timetable_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size8dp"
            android:layout_marginLeft="@dimen/size16dp"
            android:layout_marginRight="@dimen/size16dp"
            android:text="@string/clashing_timetable_instructions"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/rg_clashing_session_choices"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/rb_overwrite_clashing_sessions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overwrite_clashing_sessions" />

            <RadioButton
                android:id="@+id/rb_leave_out_new_clashing_sessions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leave_out_new_clashing_sessions" />

            <RadioButton
                android:id="@+id/rb_keep_all_clashing_sessions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keep_all_clashing_sessions" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/size16dp"
                android:layout_marginRight="@dimen/size16dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/size16dp"
                android:layout_marginRight="@dimen/size16dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>