<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_confirm_edit_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size8dp"
            android:layout_marginLeft="@dimen/size16dp"
            android:layout_marginRight="@dimen/size16dp"
            android:layout_marginTop="@dimen/size8dp"
            android:text="@string/confirm_edit_instructions"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/rg_confirm_edit_choices"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/rb_edit_all_instances"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_all_instances" />

            <RadioButton
                android:id="@+id/rb_edit_just_this_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_just_this_one" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/size16dp"
                android:layout_marginRight="@dimen/size16dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/size16dp"
                android:layout_marginRight="@dimen/size16dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>